修复过期方法